# Generativity

./: .gitignore  ComplexityEfficiency.ipynb  DomeParadox.ipynb  DomeParadoxDoublePendulum.ipynb  EntropyFlowLagrangianExamples.ipynb  LICENSE  LagrangianZoo.ipynb  ML Examples.ipynb  ML_EntropyLossExamples.ipynb  ML_EntropyResolutionLoss.ipynb  PhysicsNumericAnalysis.ipynb  PhysicsNumericTesting.ipynb  Plots.ipynb  Prime_Optimization_with_Imax.ipynb  README.md  VoidLang.hs  alpha_set_classical.v  alpha_set_ternary.v  clock_rate.py  dao.tex  draft2.tex  gen_set.lean  generative_set.v  optimization_prompt.md  paper.tex  preprint.md  preprint.tex  proofs_with_claude.md  recursive_reasoning.ipynb  references.bib  validate_everything_formula.py  validate_heat_death_formula.py
AI/: optimization_prompt.md  recursive_reasoning.ipynb
DAO/: .gitignore  CLAUDE.md  README.md  ROCQ_LOGIC_OPERATORS.md
DAO/Coq/: alpha_set.v  alpha_set_classical.v  alpha_set_finite.v  alpha_set_ternary.v  generative_set.v
DAO/Haskell/: KenosisEngine.hs  Ouroboros.hs  OuroborosAdvanced.hs  OuroborosStandalone.hs  ParadoxNumbers.hs  ParadoxPhysics.hs  RenormalizationRigorous.hs  SymmetryBreaking.hs  TestConstructiveGenerative.hs  astronomy_impossible.hs  black_hole_ptm.hs  cern_impossible.hs  consciousness_simulator.hs  generative_type.hs  ideas.md  impossibile.hs  impossible_arithmetic.py  impossible_continued.hs  impossible_extended.hs  impossible_physics.hs  nasa_impossible.hs  paradox_turing_machine.hs  zfc.hs
DAO/Lean/: DAO.lean  DEVELOPMENT.md  TRANSLATION_PLAN.md  generative_set.lean  lake-manifest.json  lakefile.lean  test_diagonal.lean  test_generative.lean  test_metaphysics.lean
DAO/Lean/.lake/: lakefile.olean  lakefile.olean.trace
DAO/Lean/DAO/: Core.lean  Simple.lean  Temporal.lean
DAO/Rocq/: .gitignore  DEVELOPMENT.md  Makefile  NoetherDemo.hs  README.md  RunTestSuite.hs  StressTest.hs  ThermodynamicDemo.hs  TotalityDemo.hs  VoidForensics.hs  VoidLang.hs  VoidLangWrapper.hs  _CoqProject
DAO/Rocq/Legacy/: alpha_set_classical.v
DAO/Rocq/Unravel/: Agent.hs  ConsciousnessMirror.hs  InfiniteLoopInvestigation.hs  NoetherDemo.hs  ParticleDecay.hs  TotalityDemo.hs  UnravelExtract.hs  UnravelWrapper.hs  VoidForensics.hs
DAO/Rocq/Unravel/haskell/thermo-lang/: WhitePaper.md  thermo-lang.cabal
DAO/Rocq/Unravel/haskell/thermo-lang/app/: Main.hs
DAO/Rocq/Unravel/haskell/thermo-lang/json_fork/: Demos.hs  ThermoJSON.hs  ThermoLang.hs  ThermoParser.hs  thermo-lang.cabal
DAO/Rocq/Unravel/haskell/thermo-lang/src/: ThermoLang.hs  ThermoParser.hs  ThermoTypeSystem.hs  UnravelMonad.hs
DAO/Rocq/Unravel/haskell/thermo-lang/thermo/: black_hole_accretion.thermo  circuit_breaker.thermo  entanglement_monogamy.thermo  entropic_decay.thermo  ghost_in_the_machine.thermo  gravitational_response_curve.thermo  hologram_equivalence.thermo  nested_shield_horizon.thermo  past_lightcone_collapse.thermo  schrodingers_list.thermo  tripartite_entanglement.thermo  verifiable_computation.thermo  wheel_physics.thermo
DAO/Rocq/src/: DAO.v  DAO_Framework_Assessment.md  Notes_ClassicalLogicAsMetaphysicalOpinion.md  Notes_ComputationalRealityComparison.md  Notes_MathematicsAsMetaphysics.md
DAO/notes/: HoTT.md  Notes_ComputationalRealityComparison.md  Notes_OnTheOriginOfMathematics.md  Notes_TruthGeneration.md  PTMFutureDirections.md  README.md  RefactoringPlan.md  noether.md  why_impossible_arithmetic_is_different.md
DAO/omega_types/: COMPREHENSIVE_GUIDE.md  DIRECTORY_STRUCTURE.md  IMPROVEMENT_PLAN.md  PROJECT_STRUCTURE.md  PracticalTotal.hs  QUICK_REFERENCE.md  README.md  STRESS_TEST_REPORT.md  SUMMARY.md  TYPESCRIPT_GUIDE.md  TestNoether.hs  UNRAVEL_DESIGN_PATTERN.md  V1_VS_V2_COMPARISON.md  cpp_stress_test.cpp  demo.html  simple_omega.cpp
DAO/omega_types/cpp/: README.md  (+4 more)
DAO/scripts/: no_self_totality_demo.py  ouroboros.hs
Unravel/: .gitignore  Unravel.hs
Unravel/legacy/: UnravelExtract.hs
Unravel/thermo-lang/: ThermoOfLogicChatGPT.md  ThermodynamicsOfLogic.md  WhitePaper.md  thermo-lang.cabal
Unravel/thermo-lang/app/: Main.hs
Unravel/thermo-lang/json_fork/: Main.hs  ThermoTypeSystem.hs  UnravelMonad.hs
Unravel/thermo-lang/src/: ThermoLang.hs  ThermoParser.hs  ThermoTypeSystem.hs  UnravelMonad.hs
Unravel/thermo-lang/thermo/: black_hole_formation.thermo  boundary_compression_stress_test.thermo  budget_breaker.thermo  budget_graceful.thermo  circuit_breaker.thermo  consciousness.thermo  curvature_ladder.thermo  density_matrix.thermo  entropic_decay_division.thermo  gas_basic.thermo  gas_clear_failure.thermo  gas_fold_accumulation.thermo  gas_nested_repeat.thermo  geodesic_collision.thermo  geodesic_collision.thermo.badsyntax  grand_unified_dashboard.thermo  gravitational_response_curve.thermo  gravitational_response_v2.thermo  gravitational_singularity.thermo  harmonic_oscillator.thermo  heat_diffusion_1d.thermo  heat_diffusion_with_limits.thermo  impossible_proof.thermo  kalman.thermo  maxwells_demon_v2.thermo  monte_carlo_pricer.thermo  nested_recovery.thermo  orbital_mechanics.thermo  philosopher.thermo  portfolio_optimizer.thermo  radioactive_decay.thermo  recursion_bomb.thermo  simple_pendulum.thermo  structural_stress.thermo  synthesis_problem.thermo  synthesis_problem2.thermo  thermodynamic_gas.thermo  twin_paradox.thermo
Unravel/unravel-framework/: unravel-framework.cabal
Unravel/unravel-framework/app/: BasicDemo.hs  Main.hs
Unravel/unravel-framework/app/Demos/: DataScience.hs  Reactor.hs
Unravel/unravel-framework/src/Control/Monad/: Unravel.hs
Unravel/unravel-framework/src/Control/Monad/Unravel/: SafeIO.hs
Unravel/unravel-framework/src/Data/Unravel/: Universe.hs
Unravel/unravel-rs/: Cargo.toml  README.md
Unravel/unravel-rs/src/: interop.rs  ops.rs  unravel.rs  void_info.rs
Unravel/unravel_rs/: Cargo.toml  README.md
papers/dao/: dao.tex
physics/: validate_imin_formula.py
unravel-rs/: CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  RELEASE_NOTES.md
unravel-rs/examples/: basic.rs  zero_cost.rs
unravel-rs/src/: compute.rs  lib.rs  ops.rs  universe.rs  void_info.rs
(+305 files in other folders)
