cabal-version:      3.0
name:               thermo-lang
version:            0.1.6.0
synopsis:           A Thermodynamic Language for Total Functional Programming
license:            MIT
author:             The DAO Framework Team
build-type:         Simple

common shared-properties
    ghc-options: -Wall
    default-language: GHC2021
    -- Common extensions that make compiler writing easier
    default-extensions: 
        OverloadedStrings
        LambdaCase
        RecordWildCards

library
    import:           shared-properties
    exposed-modules:  UnravelMonad
                    , ThermoLang
                    , ThermoTypeSystem
                    , ThermoParser
    build-depends:    base >= 4.17 && < 5
                    , containers
                    , megaparsec
                    , parser-combinators
                    , text
    hs-source-dirs:   src

executable thermo
    import:           shared-properties
    main-is:          Main.hs
    build-depends:    base >= 4.17 && < 5
                    , thermo-lang
                    , containers
                    , megaparsec
    hs-source-dirs:   app