cabal-version:      3.0
name:               unravel-framework
version:            0.1.0.0
synopsis:           A Thermodynamic Error Handling Framework for Haskell
description:        A monad transformer library that implements Impossibility Algebra,
                    allowing for total, reversible, and entropy-aware error handling
                    in production systems.
license:            MIT
author:             The DAO Framework Team
build-type:         Simple

common shared-properties
    ghc-options: -Wall
    default-language: GHC2021

library
    import:           shared-properties
    hs-source-dirs:   src
    
    -- The modules you can import in other projects
    exposed-modules:  Data.Unravel.Universe
                    , Control.Monad.Unravel
                    , Control.Monad.Unravel.SafeIO
    
    -- Dependencies required for the Monad Transformer logic
    build-depends:    base >= 4.17 && < 5
                    -- StateT
                    , mtl
                    -- MonadThrow, MonadCatch
                    , exceptions
                    -- MonadIO
                    , transformers

executable unravel-demo
    import:           shared-properties
    hs-source-dirs:   app
    main-is:          Main.hs
    
    -- Depends on the library defined above
    build-depends:    base
                    , unravel-framework