cabal-version:      3.0
name:               unravel-framework
version:            0.1.1.0
synopsis:           A Thermodynamic Error Handling Framework for Haskell
license:            MIT
author:             The DAO Framework Team
build-type:         Simple

common shared-properties
    ghc-options: -Wall
    default-language: GHC2021

library
    import:           shared-properties
    hs-source-dirs:   src
    exposed-modules:  Data.Unravel.Universe
                    , Control.Monad.Unravel
                    , Control.Monad.Unravel.SafeIO
    build-depends:    base >= 4.17 && < 5
                    , mtl
                    , exceptions
                    , transformers

executable unravel-demo
    import:           shared-properties
    hs-source-dirs:   app
    main-is:          Main.hs
    other-modules:    Demos.Reactor
                    , Demos.DataScience
    build-depends:    base
                    , unravel-framework
                    , mtl
                    , transformers