cabal-version:      3.0
name:               thermo-lang
version:            0.1.0.0
synopsis:           A Thermodynamic Language for Total Functional Programming
license:            MIT
author:             Nichoals King
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  UnravelMonad
                    , ThermoLangV2
                    , ThermoTypeSystem
                    , ThermoParser
    -- other-modules:
    build-depends:    base ^>=4.17.2.1
                    , containers
                    , megaparsec
                    , parser-combinators
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010

executable thermo
    import:           warnings
    main-is:          Main.hs
    -- link the library above
    build-depends:    base ^>=4.17.2.1
                    , thermo-lang
                    , containers
                    , megaparsec
    hs-source-dirs:   app
    default-language: Haskell2010